--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
+    "@next/font": "^14.2.15",
     "@vercel/postgres": "^0.10.0",
+    "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.4.3",
     "lucide-react": "^0.474.0",
