--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "express": "^4.21.2",
     "framer-motion": "^12.4.3",
     "lucide-react": "^0.474.0",
-    "next": "15.1.6",
+    "next": "^15.3.0",
     "pg": "^8.13.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "vercel": "^41.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "vercel": "^25.2.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
